--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pickaplace",
+  "name": "idealio",
   "version": "0.0.1",
   "description": "Application that shows a ranked list of commercial places by detailed search options",
   "main": "index.js",
@@ -13,6 +13,8 @@
     "nodemon": "^1.17.5"
   },
   "dependencies": {
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
     "morgan": "^1.9.0"
   }
 }
