--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "nodemon": "^1.17.5"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "morgan": "^1.9.0"
+    "knex": "^0.14.6",
+    "morgan": "^1.9.0",
+    "pg": "^7.4.3"
   }
 }
