--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bookshelf": "^0.13.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-validator": "^5.2.0",
     "knex": "^0.14.6",
     "morgan": "^1.9.0",
     "pg": "^7.4.3"
