--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "bookshelf": "^0.13.3",
+    "bootstrap": "^4.1.1",
     "chosen-js": "^1.8.5",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
@@ -22,6 +23,7 @@
     "knex": "^0.14.6",
     "morgan": "^1.9.0",
     "pg": "^7.4.3",
-    "react-select": "^2.0.0-beta.6"
+    "react-select": "^2.0.0-beta.6",
+    "reactstrap": "^6.1.0"
   }
 }
