--- a/package.json
+++ b/package.json
@@ -20,10 +20,17 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-validator": "^5.2.0",
+    "jquery": "^3.3.1",
     "knex": "^0.14.6",
     "morgan": "^1.9.0",
     "pg": "^7.4.3",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-select": "^2.0.0-beta.6",
     "reactstrap": "^6.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Jay-Jeong1988/Idealio"
   }
 }
