--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pg": "^7.4.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
     "react-select": "^2.0.0-beta.6",
     "reactstrap": "^6.1.0"
   },
