--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
     "react-select": "^2.0.0-beta.6",
-    "reactstrap": "^6.1.0"
+    "react-slick": "^0.23.1",
+    "reactstrap": "^6.1.0",
+    "slick-carousel": "^1.8.1"
   },
   "repository": {
     "type": "git",
