--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express": "^4.16.3",
     "express-validator": "^5.2.0",
     "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.3.0",
+    "jwt-decode": "^2.2.0",
     "knex": "^0.14.6",
     "morgan": "^1.9.0",
     "pg": "^7.4.3",
