--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "chosen-js": "^1.8.5",
+    "d3": "^5.12.0",
+    "jquery": "^3.3.1",
+    "jwt-decode": "^2.2.0",
+    "popper.js": "^1.15.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-router-dom": "^4.3.1",
+    "react-select": "^2.0.0-beta.6",
+    "react-slick": "^0.23.1",
+    "reactstrap": "^6.1.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -14,5 +25,4 @@
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:5000/"
-  
 }
